<resources>

    <string name="action_settings">Settings</string>
    <string name="about_frogobox">Frogobox Software Industry</string>

    <!-- Ads Banner Size -->
    <string name="ads_size_banner">BANNER</string> <!-- 320x50dp -->
    <string name="ads_size_large_banner">LARGE_BANNER</string> <!-- 320x100dp -->
    <string name="ads_size_medium_rectangle">MEDIUM_RECTANGLE</string> <!-- 300x250dp -->
    <string name="ads_size_full_banner">FULL_BANNER</string> <!-- 468x60dp -->
    <string name="ads_size_leader_board">LEADERBOARD</string> <!-- 728x90dp -->
    <string name="ads_size_smart_banner">SMART_BANNER</string> <!-- match_parent -->

    <string name="title_baterry_saver">Battery Saver</string>
    <string name="title_cpu_cooler">CPU Cooler</string>
    <string name="title_junk_cleaner">Junk Cleaner</string>
    <string name="title_charge_booster">Phone Optimize</string>
    <string name="title_about_us">toolbar_about_us</string>
    <string name="button_apply">Apply</string>

    <string name="toast_cleaned_junk">No Junk Files Already Cleaned</string>
    <string name="toast_cpu_normal_temperature">CPU Temperature is Already Normal</string>
    <string name="toast_phone_already_optimized">Phone Is Already Optimized</string>
    <string name="button_cool_down">Cool Down</string>
    <string name="button_cooled">Cooled</string>
    <string name="button_clean">Clean</string>
    <string name="button_cleaned">Cleaned</string>
    <string name="button_optimize">Optimize</string>
    <string name="button_optimized">Optimized</string>

    <string name="text_junk_cache">Cache Memory</string>
    <string name="text_junk_residual">Residual Files</string>
    <string name="text_junk_system">System Junk</string>
    <string name="text_junk_temp">Temporary Files</string>
    <string name="text_storage">Storage</string>
    <string name="text_found">Found</string>

    <string name="text_junk_scanning">Scanning</string>
    <string name="text_junk_condition_1_clean">Crystal Clear</string>
    <string name="text_junk_condition_2_clean">Phone totally cleaned</string>
    <string name="text_junk_condition_2_dirty">Junk has been found</string>

    <string name="text_temp_condition_1_cool">Normal</string>
    <string name="text_temp_condition_1_hot">Overheated</string>
    <string name="text_temp_condition_2_cool">CPU Temperature is GOOD</string>
    <string name="text_temp_condition_2_hot">Apps are causing problem hit cool down</string>
    <string name="text_cpu_cooler_empty_apps">Currently No App Causing Overheating</string>


</resources>
