<?xml version="1.0" encoding="utf-8"?>

<!--
 * Created by 
 * FrogoBox Inc License
 * =========================================
 * 
 * Copyright (C) .      
 * All rights reserved
 * 
 * Name     : Muhammad Faisal Amir
 * E-mail   : faisalamircs@gmail.com
 * Github   : github.com/amirisback
 * LinkedIn : linkedin.com/in/faisalamircs
 * 
 * FrogoBox Software Industries
 * 
 -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/bottom_menu_charge_booster"
            android:icon="@drawable/ic_tablayout_chargebooster"
            android:title="@string/title_charge_booster"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/bottom_menu_cooler"
            android:icon="@drawable/ic_tablayout_cooler"
            android:title="@string/title_cpu_cooler"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/bottom_menu_junk"
            android:icon="@drawable/ic_tablayout_junkcleaner"
            android:title="@string/title_junk_cleaner"
            app:showAsAction="ifRoom"/>

</menu>