<?xml version="1.0" encoding="utf-8"?>
<!--<LinearLayout-->
<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    android:orientation="vertical"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:weightSum="8"-->
<!--    android:background="@color/colorBackgroundBlack">-->

<!--    <LinearLayout-->
<!--        android:background="@color/colorBackgroundDarkBlackBlue"-->
<!--        android:orientation="vertical"-->
<!--        android:weightSum="8"-->
<!--        android:layout_weight="6"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp">-->

<!--        <LinearLayout-->
<!--            android:layout_weight="5"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp">-->

<!--            <ImageView-->
<!--                android:id="@+id/mainbrush"-->
<!--                android:paddingTop="@dimen/_10sdp"-->
<!--                android:paddingBottom="@dimen/_10sdp"-->
<!--                android:src="@drawable/img_junktop_blue"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent" />-->

<!--        </LinearLayout>-->

<!--        <LinearLayout-->
<!--            android:weightSum="2"-->
<!--            android:orientation="vertical"-->
<!--            android:layout_weight="3"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp">-->

<!--            <TextView-->
<!--                android:id="@+id/maintext"-->
<!--                android:gravity="center"-->
<!--                android:text="CRYSTAL CLEAR"-->
<!--                android:textColor="@color/colorTextGreen"-->
<!--                android:textStyle="bold"-->
<!--                android:textSize="@dimen/_25sdp"-->
<!--                android:layout_weight="1"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="0dp"-->
<!--                android:paddingBottom="@dimen/_5sdp" />-->

<!--            <Button-->
<!--                android:id="@+id/mainbutton"-->
<!--                android:layout_gravity="center"-->
<!--                android:text="@string/button_clean"-->
<!--                android:background="@drawable/box_border_button_blue"-->
<!--                android:layout_width="180dp"-->
<!--                android:layout_height="wrap_content" />-->

<!--        </LinearLayout>-->

<!--    </LinearLayout>-->

<!--    <LinearLayout-->
<!--        android:orientation="horizontal"-->
<!--        android:weightSum="4"-->
<!--        android:layout_weight="2"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:background="@color/colorBackgroundDarkBlackBlue"-->
<!--        android:layout_marginTop="1dp"-->
<!--        android:gravity="center">-->

<!--        <LinearLayout-->
<!--            android:layout_weight="1"-->
<!--            android:weightSum="4"-->
<!--            android:orientation="vertical"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_gravity="center"-->
<!--            android:gravity="center"-->
<!--            android:paddingBottom="@dimen/_5sdp">-->

<!--            <TextView-->
<!--                android:id="@+id/cachetext"-->
<!--                android:textColor="@color/colorTextWhite"-->
<!--                android:gravity="center"-->
<!--                android:text="0 MB"-->
<!--                android:layout_weight="1"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="0dp" />-->

<!--            <ImageView-->
<!--                android:id="@+id/cache"-->
<!--                android:src="@drawable/img_junk_green_cache"-->
<!--                android:layout_weight="2"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="0dp" />-->

<!--        </LinearLayout>-->

<!--        <LinearLayout-->
<!--            android:paddingBottom="@dimen/_5sdp"-->
<!--            android:layout_weight="1"-->
<!--            android:weightSum="4"-->
<!--            android:orientation="vertical"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_gravity="center"-->
<!--            android:gravity="center">-->

<!--            <TextView-->
<!--                android:id="@+id/temptext"-->
<!--                android:textColor="@color/colorTextWhite"-->
<!--                android:gravity="center"-->
<!--                android:text="0 MB"-->
<!--                android:layout_weight="1"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="0dp" />-->

<!--            <ImageView-->
<!--                android:id="@+id/temp"-->
<!--                android:src="@drawable/img_junk_green_temp"-->
<!--                android:layout_weight="2"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="0dp" />-->

<!--        </LinearLayout>-->

<!--        <LinearLayout-->
<!--            android:paddingBottom="@dimen/_5sdp"-->
<!--            android:layout_weight="1"-->
<!--            android:weightSum="4"-->
<!--            android:orientation="vertical"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_gravity="center"-->
<!--            android:gravity="center">-->

<!--            <TextView-->
<!--                android:id="@+id/residuetext"-->
<!--                android:textColor="@color/colorTextWhite"-->
<!--                android:gravity="center"-->
<!--                android:text="0 MB"-->
<!--                android:layout_weight="1"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="0dp" />-->

<!--            <ImageView-->
<!--                android:id="@+id/residue"-->
<!--                android:src="@drawable/img_junk_green_residual"-->
<!--                android:layout_weight="2"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="0dp" />-->

<!--        </LinearLayout>-->

<!--        <LinearLayout-->
<!--            android:paddingBottom="@dimen/_5sdp"-->
<!--            android:layout_weight="1"-->
<!--            android:weightSum="4"-->
<!--            android:orientation="vertical"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_gravity="center"-->
<!--            android:gravity="center">-->

<!--            <TextView-->
<!--                android:id="@+id/systemtext"-->
<!--                android:textColor="@color/colorTextWhite"-->
<!--                android:gravity="center"-->
<!--                android:text="0 MB"-->
<!--                android:layout_weight="1"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="0dp" />-->

<!--            <ImageView-->
<!--                android:id="@+id/system"-->
<!--                android:src="@drawable/img_junk_green_system"-->
<!--                android:layout_weight="2"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="0dp" />-->

<!--        </LinearLayout>-->

<!--    </LinearLayout>-->

<!--</LinearLayout>-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical">

<LinearLayout
    android:background="@color/colorBackgroundDarkBlackBlue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@id/residuaa"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/mainbrush"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/img_junktop_blue" />

    <TextView
        android:id="@+id/maintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_big_16dp"
        android:layout_marginBottom="@dimen/dimen_big_16dp"
        android:gravity="center"
        android:text="CRYSTAL CLEAR"
        android:textColor="@color/colorTextGreen"
        android:textSize="@dimen/_25sdp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/mainbutton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/box_border_button_blue"
        android:text="@string/button_clean" />

</LinearLayout>

<LinearLayout
    android:id="@+id/residuaa"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_alignParentBottom="true"
    android:background="@color/colorBackgroundDarkBlackBlue"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="@dimen/dimen_big_16dp"
    android:weightSum="4">

    <LinearLayout style="@style/LinearLayoutJunk">

        <TextView
            android:id="@+id/cachetext"
            style="@style/TextViewJunk" />

        <TextView
            android:id="@+id/cache"
            style="@style/CircleJunk"
            android:text="@string/text_junk_cache" />

    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutJunk">

        <TextView
            android:id="@+id/temptext"
            style="@style/TextViewJunk" />

        <TextView
            android:id="@+id/temp"
            style="@style/CircleJunk"
            android:text="@string/text_junk_temp" />

    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutJunk">

        <TextView
            android:id="@+id/residuetext"
            style="@style/TextViewJunk" />

        <TextView
            android:id="@+id/residue"
            style="@style/CircleJunk"
            android:text="@string/text_junk_residual" />

    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutJunk">

        <TextView
            android:id="@+id/systemtext"
            style="@style/TextViewJunk" />

        <TextView
            android:id="@+id/system"
            style="@style/CircleJunk"
            android:text="@string/text_junk_system" />

    </LinearLayout>

</LinearLayout>

</RelativeLayout>